--- a/TKV2025_soubory/sheet014.htm
+++ b/TKV2025_soubory/sheet014.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -45,16 +46,16 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10913 style='border-collapse:
- collapse;table-layout:fixed;width:8192pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11011 style='border-collapse:
+ collapse;table-layout:fixed;width:8266pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
  width:154pt'>
  <col class=xl70 width=91 style='mso-width-source:userset;mso-width-alt:3328;
  width:68pt'>
- <col class=xl70 width=41 style='mso-width-source:userset;mso-width-alt:1499;
- width:31pt'>
+ <col class=xl70 width=42 style='mso-width-source:userset;mso-width-alt:1536;
+ width:32pt'>
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 span=2 style='mso-width-source:userset;mso-width-alt:
  1718;width:35pt'>
@@ -212,8 +213,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
  <col class=xl70 width=91 style='mso-width-source:userset;mso-width-alt:3328;
  width:68pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -276,7 +277,7 @@ else
   <td height=20 class=xl70 width=47 style='height:15.0pt;width:35pt'></td>
   <td class=xl70 width=205 style='width:154pt'></td>
   <td class=xl70 width=91 style='width:68pt'></td>
-  <td class=xl70 width=41 style='width:31pt'></td>
+  <td class=xl70 width=42 style='width:32pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -370,7 +371,7 @@ else
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1083,7 +1084,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>21</td>
+  <td class=xl165 style='border-left:none'>22</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1213,13 +1214,13 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
   [CZE056087]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9900</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>17</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10650</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>12,3</td>
+  <td class=xl148 style='border-top:none;border-left:none'>12,1</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1348,13 +1349,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>17</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9150</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9800</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>18</td>
+  <td class=xl165 style='border-top:none;border-left:none'>19</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1799,8 +1800,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6750</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7200</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2022,8 +2023,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6100</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6450</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2156,16 +2157,16 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Musil Luboš [CZE050653]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6250</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
-  <td class=xl82 style='border-top:none'>Doležal Michal [CZE055580]</td>
-  <td class=xl145 style='border-left:none'>3</td>
+  <td class=xl82 style='border-top:none'>Brussmann Jiří [CZE056087]</td>
+  <td class=xl145 style='border-left:none'>4</td>
   <td class=xl70></td>
   <td class=xl101>&nbsp;</td>
   <td class=xl70></td>
@@ -2503,15 +2504,15 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Musil Luboš [CZE050653]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6000</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Brussmann Jiří [CZE056087]</td>
+  <td class=xl82 style='border-top:none'>Doležal Michal [CZE055580]</td>
   <td class=xl82 style='border-top:none;border-left:none'>3</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -2643,9 +2644,12 @@ else
   [CZE056087]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
+  [CZE056087]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2683,9 +2687,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5350</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5600</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2823,9 +2827,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2863,9 +2869,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5250</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>5350</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3000,9 +3006,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3178,9 +3186,11 @@ else
   [CZE055580]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3220,8 +3230,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>11</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vrzal Miroslav
   [CZE064231]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4250</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3356,9 +3366,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3531,9 +3543,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3706,9 +3720,12 @@ else
   [CZE064231]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vrzal Miroslav
+  [CZE064231]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -4894,8 +4911,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>21</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Koukal Jiří [CZE061258]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5040,8 +5057,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>22</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Koukal Jiří [CZE061258]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Bender Martin [CZE045588]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -15097,7 +15114,7 @@ else
   <td width=47 style='width:35pt'></td>
   <td width=205 style='width:154pt'></td>
   <td width=91 style='width:68pt'></td>
-  <td width=41 style='width:31pt'></td>
+  <td width=42 style='width:32pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
   <td width=47 style='width:35pt'></td>
@@ -15191,7 +15208,7 @@ else
   <td width=91 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=177 style='width:133pt'></td>
   <td width=91 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
