--- a/TKV2025_soubory/sheet015.htm
+++ b/TKV2025_soubory/sheet015.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=10978 style='border-collapse:
- collapse;table-layout:fixed;width:8241pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=11075 style='border-collapse:
+ collapse;table-layout:fixed;width:8314pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
@@ -215,8 +216,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
  <col class=xl70 width=91 style='mso-width-source:userset;mso-width-alt:3328;
  width:68pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -373,7 +374,7 @@ else
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
   <td class=xl70 width=91 style='width:68pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -1086,7 +1087,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>21</td>
+  <td class=xl165 style='border-left:none'>22</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1216,16 +1217,16 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
   [CZE056087]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>17</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9750</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>611
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>632
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>12,7</td>
+  <td class=xl148 style='border-top:none;border-left:none'>12,4</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1354,16 +1355,16 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>17</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9250</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9600</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>608
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>622
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>18</td>
+  <td class=xl165 style='border-top:none;border-left:none'>19</td>
   <td class=xl98></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1582,11 +1583,11 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8150</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8500</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>535
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>551
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1809,18 +1810,17 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
-  [CZE055580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7550</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7850</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>496
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>509
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
   <td colspan=2 class=xl190 style='border-right:.5pt solid black;border-left:
-  none'>3 192 Kč</td>
+  none'>3 290 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2038,12 +2038,13 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7300</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
+  [CZE055580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>11</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7550</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>479
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>489
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2176,12 +2177,12 @@ else
   <td height=20 class=xl94 style='height:15.0pt;font-size:11.0pt;color:black;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>7050</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7500</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>463
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>486
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2522,9 +2523,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6750</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>9</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7050</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2659,9 +2660,11 @@ else
   [CZE055580]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>850</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2700,8 +2703,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>5400</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6050</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2837,9 +2840,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>750</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -2885,8 +2890,8 @@ else
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
-  <td class=xl82 style='border-top:none'>Musil Daniel [CZE060863]</td>
-  <td class=xl82 style='border-top:none;border-left:none'>2</td>
+  <td class=xl82 style='border-top:none'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl82 style='border-top:none;border-left:none'>3</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -3018,9 +3023,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>650</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3060,14 +3067,14 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>10</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vrzal Miroslav
   [CZE064231]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>3800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>13</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>4050</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
-  <td class=xl82 style='border-top:none'>Brussmann Jiří [CZE056087]</td>
+  <td class=xl82 style='border-top:none'>Musil Daniel [CZE060863]</td>
   <td class=xl82 style='border-top:none;border-left:none'>2</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
@@ -3195,9 +3202,12 @@ else
   [CZE056087]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>550</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
+  [CZE056087]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3371,9 +3381,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3547,9 +3559,11 @@ else
   [CZE064231]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>450</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -3725,9 +3739,12 @@ else
   [WRD080011]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>350</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vrzal Miroslav
+  [CZE064231]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>250</td>
   <td class=xl70></td>
   <td class=xl94></td>
   <td class=xl70></td>
@@ -15227,7 +15244,7 @@ else
   <td width=91 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=177 style='width:133pt'></td>
   <td width=91 style='width:68pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
