--- a/TKV2025_soubory/sheet030.htm
+++ b/TKV2025_soubory/sheet030.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -1087,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>22</td>
+  <td class=xl165 style='border-left:none'>23</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1219,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>13700</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>986
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>957
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1359,7 +1358,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8550</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>616
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>597
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1588,7 +1587,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>7900</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>569
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>552
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1816,7 +1815,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>7300</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>526
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>510
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
@@ -2045,7 +2044,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>6550</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>472
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>457
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2183,7 +2182,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>6350</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>457
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>444
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
