--- a/TKV2025_soubory/sheet021.htm
+++ b/TKV2025_soubory/sheet021.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -1087,7 +1086,7 @@ else
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71>Aktuální kolo</td>
-  <td class=xl165 style='border-left:none'>22</td>
+  <td class=xl165 style='border-left:none'>23</td>
   <td class=xl96></td>
   <td class=xl97>&nbsp;</td>
   <td class=xl163>&nbsp;</td>
@@ -1220,7 +1219,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>10400</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>354
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>343
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1358,7 +1357,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>8600</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>292
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>284
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1586,7 +1585,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>7250</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>246
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>239
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1815,7 +1814,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>6650</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>226
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>219
   Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
@@ -2044,7 +2043,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>6350</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>216
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>209
   Kč</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -2182,7 +2181,7 @@ else
   <td class=xl70 style='border:.5pt solid windowtext'>5050</td>
   <td class=xl139 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>172
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>167
   Kč</td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
